SVGRoot's writing-mode should not affect SVGText/SVGForeign's location

BUG=667124

Review-Url: https://codereview.chromium.org/2519103002
Cr-Commit-Position: refs/heads/master@{#433612}

Former-commit-id: 493c1af179be82c3163b37a219ddcdf3c1eb703e