third_party/WebKit/Source/core/layout/LayoutBox.cpp
@@ -5177,6 +5177,11 @@ LayoutPoint LayoutBox::flipForWritingModeForChild(
 }
 
 LayoutBox* LayoutBox::locationContainer() const {
+  // Location of a non-root SVG object derived from LayoutBox should not be
+  // affected by writing-mode of the containing box (SVGRoot).
+  if (isSVG() && !isSVGRoot())
+    return nullptr;
+
   // Normally the box's location is relative to its containing box.
   LayoutObject* container = this->container();
   while (container && !container->isBox())
